<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appl_maint_mngt.views.account.AccountRegisterActivity">

    <EditText
        android:id="@+id/register_edittext_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/account_edittext_hint_email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/register_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/account_edittext_hint_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="71dp" />

    <EditText
        android:id="@+id/register_edittext_password_conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_edittext_hint_passwordconfirm"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="134dp" />

    <EditText
        android:id="@+id/register_edittext_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_edittext_hint_firstname"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="195dp" />

    <EditText
        android:id="@+id/register_edittext_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_edittext_hint_surname"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="253dp" />

    <Spinner
        android:id="@+id/register_spinner_usertype"
        android:layout_width="217dp"
        android:layout_height="38dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="305dp" />

    <Button
        android:id="@+id/register_button_selectdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text_selectdob"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="357dp" />

    <TextView
        android:id="@+id/register_textview_date_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="368dp" />

    <Button
        android:id="@+id/register_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text_register"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="422dp" />

</android.support.constraint.ConstraintLayout>
